--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
 	<div id="resume" class="resumeSection section">
 		<div class ="col-md-12 text-center">
 			<p class = "subHeading">English & Turkish CV</p>
-			<a href="cv/engcv.pdf" target="_blank" class="Eng">CV</a>
-			<a href="cv/turkcv.pdf" target="_blank" class="TR">CV</a>
+			<a href="cv/CanAydinCV.pdf" target="_blank" class="Eng">CV</a>
 		</div>
 
 	</div>
