--- a/index.html
+++ b/index.html
@@ -95,11 +95,20 @@
 				<div class="col-md-7">
 
 
-					<h4>My name is Can Aydin</h4>
+					<h4>Welcome To My Portfolio</h4>
 
-					<p>Hello,My name is Can Aydin. I am half Turkish, half American. 30 Years old. My life started in Kadikoy,Istanbul, Turkey on 13th of November 1993. From then I've started school in Istanbul until 4th Grade. At that point, with my dad's job, we had moved to Dubai, UAE. At that age, it was difficult for me to get used to a new place as i was just getting used to Istanbul. I've continued school from 5th grade in Dubai. I've done my school life in Dubai and studied Games Programming as a "university" course. </p>
 					<p>
-						Being in Dubai has taught me a lot of new stuff. It added new experiences to my personality. Dubai being one of the most international places to be in. I had made friends from all over the world, with different cultures. I've seen all kinds of people while I have lived in Dubai. I've seen what different kinds of stuff does to a person. Losing my mom a couple of years ago also added to my experience in Dubai, might even say it kind of made me even more mature. It was something that I couldn't get over that quickly, nor can i ever. However i have learned to with that bad experience. Finishing my course on Games Programming I have moved back to my home country to Istanbul, Turkey.
+						Hello, my name is Can Aydin. I am a 32-year-old individual with a rich cultural background, being half Turkish and half American. My journey began on November 13, 1993, in Kadikoy, Istanbul, Turkey, where I spent the early years of my life. I started my education in Istanbul and continued there until the 4th grade.
+
+						At that point, my family relocated to Dubai, UAE, due to my father’s work. Adjusting to a new environment at a young age was challenging, especially as I had just begun to feel at home in Istanbul. However, I embraced the change and continued my education in Dubai from the 5th grade onward.
+
+						Dubai, with its vibrant and multicultural atmosphere, offered me invaluable life experiences. Living in one of the most international cities in the world, I formed friendships with people from diverse cultures and backgrounds. These interactions broadened my perspective, helping me understand and appreciate different ways of life. Over the years, I’ve encountered people from various walks of life and observed how different experiences shape individuals.
+
+						During my time in Dubai, I faced a profound personal loss with the passing of my mother. This was a life-altering event that deeply impacted me, teaching me resilience and maturity. While it’s something I’ll never fully overcome, I’ve learned to live with it and draw strength from those memories.
+
+						Academically, I pursued my passion for technology and creativity by studying Games Programming at university. Completing this course marked a significant milestone in my personal and professional journey. After finishing my studies, I decided to return to my roots and moved back to Istanbul, Turkey.
+
+						My life has been a blend of diverse experiences and cultures, shaping me into someone who values adaptability, resilience, and global perspectives. These qualities, combined with my technical expertise in Games Programming, define who I am and what I bring to the table.
 					</p>
 
 				</div>
@@ -186,7 +195,7 @@
 								<i class="fa fa-clock"></i>
 							</div>
 							<div class="squareContent">
-                                <h2 class="counter">5</h2>
+                                <h2 class="counter">6</h2>
                                 <h3>Years of Working Experience</h3>
                             </div>
 						</div>
@@ -199,8 +208,8 @@
 								<i class="fa fa-upload"></i>
 							</div>
 							<div class="squareContent">
-                                <h2 class="counter">1</h2>
-                                <h3>Game published</h3>
+                                <h2 class="counter">2</h2>
+                                <h3>Game Full Launched</h3>
                             </div>
 						</div>
 					</div>
@@ -215,7 +224,7 @@
 								<i class="fa fa-gamepad"></i>
 							</div>
 							<div class="squareContent">
-                                <h2 class="counter">19</h2>
+                                <h2 class="counter">Over 30</h2>
                                 <h3>Game Apps Made</h3>
                             </div>
 						</div>
@@ -499,7 +508,7 @@
 
 	<div class="copyrightSection">
 		<div class="col-md-12 text-center">
-			<p>&copy; Copyright Can Aydin 2022</p>
+			<p>&copy; Copyright Can Aydin 2025</p>
 
 		</div>
 
